batch32/test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-compose2-deployment
  namespace: mynamespace  
  labels:
    app: docker-compose2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: docker-compose2
  template:
    metadata:
      labels:
        app: docker-compose2
    spec:
      nodeSelector:
          docker-compose2: myvalue
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: docker-compose2
                  operator: In
                  values:
                    - myvalue
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                - key: mypod
                  operator: In
                  values:
                    - myvalue
              topologyKey: kubernetes.io/hostname
      # initContainers:
      # - name: init-setup
      #   image: busybox:latest
      #   command: ['sh', '-c', 'ls; pwd; sleep 10']
      #   envFrom:  # Add this section to use the ConfigMap in the init container
      #   - configMapRef:
      #       name: docker-compose2-config
      containers:
      - name: docker-compose2
        image: vinayasrri/myrepo:1.0.0
        resources:
          # limits:
          #   cpu: "1"
          #   memory: "1Gi"    
        ports:
        - containerPort: 80
        # livenessProbe:
        #   httpGet:
        #     path: /healthz
        #     port: 80
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /readiness
        #     port: 80
        #   initialDelaySeconds: 15
        #   periodSeconds: 5
        #envFrom:
        # Add this section to use the ConfigMap in the main container
        # - configMapRef:
        #     name: docker-compose2-config
