batch32/service.yml
apiVersion: v1
kind: Service
metadata:
  name: docker-compose2-deployment
  namespace: mynamespace
spec:
  selector:
    app: docker-compose2
  type: LoadBalancer
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: docker-compose2
    protocol: TCP
    port: 80
    targetPort: 5000
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    # nodePort:
