batch32/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-network-policy
  namespace: mynamespace
spec:
  podSelector:
    matchLabels:
      app: docker-compose2
  policyTypes:
    - Ingress
  ingress:
    - ports:
      - protocol: TCP
        port: 80
